--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,8 @@ span.__sucess {
 }
 
 .product__scope__wrap {
+    position: relative;
+
     display: flex;
     justify-content: end;
 }
@@ -201,16 +203,18 @@ span.__sucess {
 
     color: #B4B4B4;
 
+    cursor: pointer;
+
     border: none;
     border-radius: 4px;
     background: #FFFEFB;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .scope__btn:hover {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .btn__text {
@@ -227,6 +231,65 @@ span.__sucess {
 
     box-sizing: border-box;
     transform: rotate(45deg);
+    transition: all 0.2s ease-in-out;
+}
+
+.__scope__active {
+    transform: rotate(225deg);
+    transition: all 0.2s ease-in-out;
+}
+
+.scope__list {
+    opacity: 0;
+    z-index: -1;
+
+    top: 40px;
+    position: absolute;
+
+    overflow: hidden;
+    border-radius: 4px;
+    border: 1px solid #b4b4b458;
+    box-shadow: 0px 2px 5px #0000001a;
+
+    transition: all 0.2s ease;
+}
+
+.__active {
+    opacity: 1;
+    z-index: 1;
+    transition: opacity 0.2s ease;
+}
+
+.scope__list__wrap {
+    padding: 0;
+    list-style-type: none;
+    background: #ffffff;
+}
+
+.scope__list__item {
+    display: block;
+    padding: 10px 16px 11px;
+    
+    color: #B4B4B4;
+    transition: all 0.3s ease-in-out;
+
+    cursor: pointer;
+}
+
+.__active__item {
+    cursor: default;
+    background: #eeedeb;
+    transition: all 0.3s ease-in-out;
+}
+
+.scope__list__item:nth-child(even) {
+    border-top: 1px solid #b4b4b458;
+    border-bottom: 1px solid #b4b4b458;
+}
+
+.scope__list__item:hover {
+    background: #eeedeb;
+    transition: all 0.1s ease;
 }
 
 .product__item {
@@ -291,8 +354,9 @@ span.__sucess {
 }
 
 .product__image {
-    border-radius: 4px;
     object-fit: cover;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 .product__item__body {
