--- a/css/style.css
+++ b/css/style.css
@@ -319,9 +319,9 @@ span.__sucess {
     padding: 10px 16px 11px;
 
     color: #B4B4B4;
-    transition: all 0.3s ease-in-out;
 
     cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 
 .__active__item {
@@ -341,6 +341,7 @@ span.__sucess {
 }
 
 .product__item {
+    opacity: 1;
     position: relative;
 
     width: calc((100% - 16px * 2) / 3);
@@ -349,7 +350,12 @@ span.__sucess {
     border-radius: 4px;
     background: #FFFEFB;
     box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.04), 0px 6px 10px rgba(0, 0, 0, 0.02);
-    transition: all 0.3s ease-in-out;
+    transition: all 0.9s ease-in-out;
+}
+
+.item__hide {
+    opacity: 0;
+    transition: all 0.9s ease-in-out;
 }
 
 .product__item:hover {
