--- a/css/style.css
+++ b/css/style.css
@@ -222,14 +222,71 @@ span.__sucess {
     border-right-color: transparent;
 
     animation-duration: 1.3s;
+    -moz-animation-duration: 0.75s;
+    -webkit-animation-duration: 0.75s;
+
     animation-name: rotate-forever;
+    -moz-animation-name: rotate-forever;
+    -webkit-animation-name: rotate-forever;
+
     animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+
     animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -moz-animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@-webkit-keyframes rotate-forever {
+    0% { 
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% { 
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@-moz-keyframes rotate-forever {
+    0% { 
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% { 
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes rotate-forever {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg);}
+    0% { 
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% { 
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
 .product__scope {
